# chat

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASING.md  SECURITY.md  docker-compose.yaml  example.env  justfile  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  publish.yml
.kiro/skills/backend-development/: SKILL.md
.kiro/skills/backend-development/references/: project-map.md
.kiro/skills/backend-testing/: SKILL.md
.kiro/skills/backend-testing/references/: test-patterns.md
.kiro/skills/frontend-development/: SKILL.md
.kiro/skills/frontend-development/references/: project-map.md
examples/: README.md
examples/01-local-dev/: README.md  example.env  pyproject.toml
examples/02-docker/: Dockerfile  README.md  docker-compose.yaml  example.env  gunicorn.conf.py
src/strands_compose_chat/: __init__.py  alembic.ini  app.py  bootstrap.py  cli.py  config.py  deps.py  errors.py  frontend.py  logging.py
src/strands_compose_chat/admin/: __init__.py  auth.py  compat.py
src/strands_compose_chat/admin/templates/: dashboard.html
src/strands_compose_chat/admin/views/: __init__.py  agent.py  api_key.py  base.py  chat_message.py  chat_session.py  dashboard.py  group.py  model_pricing.py  token_usage.py  user.py
src/strands_compose_chat/agents/: __init__.py  client.py  invocation.py  payload.py  routes.py  service.py  streaming.py
src/strands_compose_chat/analytics/: __init__.py  routes_admin.py  routes_me.py  service.py
src/strands_compose_chat/auth/: __init__.py  api_key.py  current_user.py  jit.py  oidc.py  passwords.py  routes.py  service.py
src/strands_compose_chat/db/: __init__.py  base.py
src/strands_compose_chat/db/migrations/: env.py
src/strands_compose_chat/db/models/: __init__.py  agent.py  api_key.py  associations.py  chat_message.py  chat_session.py  group.py  model_pricing.py  token_usage.py  user.py
src/strands_compose_chat/media/: __init__.py  blocks.py  routes.py  service.py
src/strands_compose_chat/middleware/: __init__.py  security_headers.py  trusted_host.py
src/strands_compose_chat/schemas/: __init__.py  agents.py  analytics.py  auth.py  invocations.py  media.py  sessions.py
src/strands_compose_chat/sessions/: __init__.py  routes.py  service.py
src/strands_compose_chat/templates/: app.html  login.html
tasks/: check.just  db.just  test.just  ui.just
tests/: conftest.py  factories.py
tests/agents/: test_routes.py  test_service.py  test_streaming.py
tests/analytics/: test_routes.py  test_service.py
tests/auth/: test_routes.py  test_service.py
tests/contract/: openapi.snapshot.json  test_openapi_snapshot.py
tests/db/: conftest.py  test_migrations.py
tests/fakes/: __init__.py  agent_client.py  oidc.py
tests/media/: test_routes.py  test_service.py
tests/sessions/: test_routes.py  test_service.py
tests/unit/: conftest.py  test_auth_invariants.py  test_content_blocks.py  test_pricing.py  test_redirect_validation.py  test_token_accounting.py
ui/: AGENTS.md  eslint.config.js  index.html  login.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
ui/admin/: dashboard.html
ui/src/: index.css
ui/src/apps/admin/: AdminApp.module.css  AdminApp.tsx  index.tsx
ui/src/apps/auth/: AuthApp.tsx  index.tsx
ui/src/apps/chat/: AppShell.tsx  ChatApp.module.css  ChatApp.tsx  index.tsx
ui/src/components/: index.ts
ui/src/components/Button/: Button.module.css  Button.tsx  index.ts
ui/src/components/Collapsible/: Collapsible.tsx
ui/src/components/Composer/: AttachmentChip.module.css  AttachmentChip.tsx  AttachmentPreview.module.css  AttachmentPreview.tsx  AttachmentViewerDialog.module.css  AttachmentViewerDialog.tsx  Composer.module.css  Composer.tsx
ui/src/components/ConfirmDialog/: ConfirmDialog.module.css  ConfirmDialog.tsx
ui/src/components/CostBadge/: CostBadge.module.css  CostBadge.tsx  index.ts
ui/src/components/DateRangePicker/: DateRangePicker.module.css  DateRangePicker.tsx
ui/src/components/Dialog/: Dialog.module.css  Dialog.tsx
ui/src/components/DropOverlay/: DropOverlay.module.css  DropOverlay.tsx  index.ts
ui/src/components/DropdownMenu/: DropdownMenu.module.css  DropdownMenu.tsx  index.ts
ui/src/components/ErrorBoundary/: ErrorBoundary.module.css  ErrorBoundary.tsx
ui/src/components/ErrorDialog/: ErrorDialog.module.css  ErrorDialog.tsx  index.ts
ui/src/contexts/: AppConfigContext.tsx  AuthContext.tsx  CollapseContext.tsx  MediaCapabilitiesContext.tsx  ThemeContext.tsx  index.ts
ui/src/hooks/: index.ts  useAsyncData.ts  useAutoScroll.ts  useColorMode.ts  useContentReveal.ts  useFetchOnce.ts  useSplitter.ts  useWindowFileDrop.ts
ui/src/services/: adminApi.ts  api.ts  demoApi.ts  http.ts  index.ts  utils.ts
ui/src/store/: chatStore.ts  index.ts
ui/src/types/: analytics.ts  api.ts  common.ts  index.ts
ui/src/views/: Header.module.css  Header.tsx  Sidebar.module.css  Sidebar.tsx  index.ts
(+117 files in other folders)
